2005-02-21  Zoltan Varga  <vargaz@freemail.hu>

	* Monitor.cs Interlocked.cs: Add net 2.0 ReliabilityContractAttributes.

2005-02-20  Zoltan Varga  <vargaz@freemail.hu>

	* Interlocked.cs: Applied patch from Luca Barbieri (luca.barbieri@gmail.com). Add NET 2.0 methods.

Tue Feb 15 18:19:11 CET 2005 Paolo Molaro <lupus@ximian.com>

	* Thread.cs: make the slothash a field in MonoThread.

2005-01-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Overlapped.cs: Added check for ControlPolicy and ControlEvidence for
	Unsafe pack. Added MonoTODO for missing security stack propagation.
	* Thread.cs: Add security checks for ControlThread.
	* ThreadPool.cs: Added declarative security checks.

Thu Jan 13 18:15:32 CET 2005 Paolo Molaro <lupus@ximian.com>

	* Thread.cs: implement stacksize and parameterized
	start functionality (requires matching runtime).

2005-01-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ThreadAbortException.cs: added private serialization .ctor.

2004-12-20  Sebastien Pouliot  <sebastien@ximian.com>

	* CompressedStack.cs: Implemented most todo so it's usable for CAS.
	* CompressedStackSwitcher.cs: Implemented most todo.
	* Thread.cs: Implement support for getting/setting CompressedStack.

2004-12-15  Zoltan Varga  <vargaz@freemail.hu>

	* Thread.cs: Change type of culture_info and ui_culture_info to 
	IntPtr. Implement correct culture handling for the UI culture as
	well.

2004-12-14  Zoltan Varga  <vargaz@freemail.hu>

	* Thread.cs: Optimize CurrentCulture to avoid initializing the
	serialization infrastructure in the common case when the culture is
	not set explicitly.

2004-12-06  Zoltan Varga  <vargaz@freemail.hu>

	* Thread.cs: Add new fields 'serialized_culture_info{_len}'.
	
	* Thread.cs (CurrentCulture): Fix leaking of culture info objects 
	across appdomains. Partially fixes #50049.

2004-12-05  Miguel de Icaza  <miguel@ximian.com>

	* AutoResetEvent.cs (Set, Reset): If we are disposed, throw a